add more contents

--- a/dashboard.html
+++ b/dashboard.html
@@ -27,8 +27,209 @@
                 </nav>
                 <div class="dividingLine"></div>
             </section>
+            <section class="dashboard-overview-box">
+                <div class="dashboard-overview-title">
+                    <p><b>Overview</b></p>
+                </div>
+                <div class="dashboard-overview">
+                    <div class="dashboard-overview-layer0">
+                        <div class="dashboard-overview-layer1"></div>
+                    </div>
+                    <p><b>Completed 2,5 out of 60 EC&nbsp;</b></p>
+                    <p><i>(* NBSA Boundary: 45)&nbsp;</i></p>
+                </div>
+            </section>
             <section>
-
+                <div class="table-year01">
+                    <!-- Block 1 -->
+                    <table class="table-view">
+                        <tr class="block-row">
+                            <th colspan="5">Semester 1 – Block 1 – Computer Science</th>
+                        </tr>
+                        <tr class="course-row">
+                            <td><b>Course Name</b></td>
+                            <td><b>EC’s</b></td>
+                            <td><b>Exam Type</b></td>
+                            <td><b>Grade</b></td>
+                            <td><b>Status</b></td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Program & Career Orientation (PCO)</td>
+                            <td>2,5</td>
+                            <td>Portfolio based assessment</td>
+                            <td>8,0</td>
+                            <td>✅</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Computer Science Basics (CBA)</td>
+                            <td>5</td>
+                            <td>Written</td>
+                            <td>9,1</td>
+                            <td>✅</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Programming Basics (PBA)</td>
+                            <td>5</td>
+                            <td>Case study</td>
+                            <td>N/A</td>
+                            <td>❌</td>
+                        </tr>
+                        <!-- Block 2 -->
+                        <tr class="block-row">
+                            <th colspan="5">Semester 1 – Block 2 – Game Development</th>
+                        </tr>
+                        <tr class="course-row">
+                            <td><b>Course Name</b></td>
+                            <td><b>EC’s</b></td>
+                            <td><b>Exam Type</b></td>
+                            <td><b>Grade</b></td>
+                            <td><b>Status</b></td>
+                        </tr>
+                        <tr class="result-row">
+                            <td rowspan="2">Object-oriented programming (OOP)</td>
+                            <td rowspan="2">10</td>
+                            <td>presentation</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Case study</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Professional skills 1 (PSK1)</td>
+                            <td>2,5</td>
+                            <td>Portfolio + Optional assessment</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <!-- Block 3 -->
+                        <tr class="block-row">
+                            <th colspan="5">Semester 2 – Block 3 – Modern Software Development</th>
+                        </tr>
+                        <tr class="course-row">
+                            <td><b>Course Name</b></td>
+                            <td><b>EC’s</b></td>
+                            <td><b>Exam Type</b></td>
+                            <td><b>Grade</b></td>
+                            <td><b>Status</b></td>
+                        </tr>
+                        <tr class="result-row">
+                            <td rowspan="2">Framework Project 1 (FPR1)</td>
+                            <td rowspan="2">5</td>
+                            <td rowspan="2">Portfolio</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Framework development 1 (FDE1)</td>
+                            <td>5</td>
+                            <td>case study exam</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Professional working environment (PWE)</td>
+                            <td>2,5</td>
+                            <td>Workplace assessment</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td rowspan="3">Professional skills 2</td>
+                            <td rowspan="3">2,5</td>
+                            <td>portfolio, optional assessment</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Open questions, multiple choice</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Multiple choice, paper</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <!-- Block 4 -->
+                        <tr class="block-row">
+                            <th colspan="5">Semester 2 – Block 4 – Modern Software Development</th>
+                        </tr>
+                        <tr class="course-row">
+                            <td><b>Course Name</b></td>
+                            <td><b>EC’s</b></td>
+                            <td><b>Exam Type</b></td>
+                            <td><b>Grade</b></td>
+                            <td><b>Status</b></td>
+                        </tr>
+                        <tr class="result-row">
+                            <td rowspan="2">Framework project 2 (FPR2)</td>
+                            <td rowspan="2">5</td>
+                            <td rowspan="2">Portfolio based Assessment</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Framework development 2 (FDE2)</td>
+                            <td>5</td>
+                            <td>portfolio</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td rowspan="3">Professional skills 3</td>
+                            <td rowspan="3">2,5</td>
+                            <td>portfolio, optional assessment</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Open questions, multiple choice</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>Multiple choice, paper</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <!-- All Year -->
+                        <tr class="block-row">
+                            <th colspan="5">All Year</th>
+                        </tr>
+                        <tr class="course-row">
+                            <td><b>Course Name</b></td>
+                            <td><b>EC’s</b></td>
+                            <td><b>Exam Type</b></td>
+                            <td><b>Grade</b></td>
+                            <td><b>Status</b></td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>HZ Personality 1 (HZP1)</td>
+                            <td>2,5</td>
+                            <td>Portfolio</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                        <tr class="result-row">
+                            <td>IT Personality 1 (ITP1)</td>
+                            <td>2,5</td>
+                            <td>Portfolio + Assessment</td>
+                            <td>N/A</td>
+                            <td>N/A</td>
+                        </tr>
+                    </table>
+                </div>
             </section>
             <div class="dividingLine"></div>
             <!-- Here is aside menu -->
