--- a/blog-swot.html
+++ b/blog-swot.html
@@ -18,7 +18,7 @@
                 <!-- Here is navigation bar -->
                 <nav id="navBar">
                     <ul>
-                        <li><a href="/homepage.html">HOME</a></li>
+                        <li><a href="/index.html">HOME</a></li>
                         <li><a href="/profile.html">PROFILE</a></li>
                         <li><a class="active" href="/blog.html">BLOG</a></li>
                         <li><a href="/dashboard.html">DASHBOARD</a></li>
